Add flag to suppress some warnings